# open-agent-sdk-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PHASE4_PLAN.md  README.md
.github/workflows/: ci.yml  scheduled-audit.yml
benches/: performance.rs
examples/: advanced_patterns.rs  auto_execution_demo.rs  calculator_tools.rs  context_management.rs  git_commit_agent.rs  hooks_example.rs  interrupt_demo.rs  log_analyzer_agent.rs  multi_tool_agent.rs  simple_query.rs  test_tool_serialization.rs  vision_api_demo.rs  vision_example.rs
src/: client.rs  config.rs  context.rs  error.rs  hooks.rs  lib.rs  retry.rs  tools.rs  types.rs  utils.rs
tests/: advanced_integration_test.rs  auto_execution_test.rs  client_image_serialization_test.rs  debug_logging_test.rs  defensive_validation_test.rs  hooks_integration_test.rs  integration_tests.rs  security_bypass_test.rs  send_message_test.rs  tool_call_content_test.rs
